# bin_data

./: Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: build.yaml
bin_data/: Cargo.toml  all.html  index.html  macro.bin_data.html  sidebar-items.js
bin_data/context/: enum.Endian.html  index.html  sidebar-items.js  struct.NoArgs.html  struct.NoEndian.html  struct.Provided.html  struct.Required.html  struct.StrArgs.html  struct.StrArgsBuilder.html  struct.VecArgs.html  struct.VecArgsBuilder.html  trait.ArgsBuilderFinished.html  trait.Context.html
bin_data/data/: fn.assert_is_view.html  index.html  sidebar-items.js  struct.Be.html  struct.Le.html  struct.SliceView.html  struct.SliceViewRef.html  trait.Decode.html  trait.Encode.html  trait.PlainData.html  trait.View.html
bin_data/src/: context.rs  data.rs  lib.rs  named_args.rs  stream.rs
bin_data/stream/: enum.DecodeError.html  enum.EncodeError.html  index.html  sidebar-items.js  trait.Direction.html  trait.IntoMagic.html  trait.Stream.html
bin_data/stream/dir/: index.html  sidebar-items.js  struct.Read.html  struct.Write.html
bin_data_macros/: Cargo.toml  all.html  index.html  macro.bin_data!.html  macro.bin_data.html  sidebar-items.js
bin_data_macros/src/: code_gen.rs  input.rs  lib.rs
bin_data_macros/tests/: all_syntax_supported.rs  ui.rs  vec_slice_view.rs
bin_data_macros/tests/ui/: encode-wrong-type.rs  encode-wrong-type.stderr  missing-argument.rs  missing-argument.stderr  missing-encode-temporary.rs  missing-encode-temporary.stderr  missing-endian.stderr  superfluous-endian.rs  superfluous-endian.stderr
src/: data.rs  lib.rs  stream.rs
src/bin_data/: context.rs.html  data.rs.html  lib.rs.html  stream.rs.html
src/bin_data_macros/: code_gen.rs.html  input.rs.html  lib.rs.html
src/either/: lib.rs.html
src/itertools/: combinations.rs.html  combinations_with_replacement.rs.html  concat_impl.rs.html  cons_tuples_impl.rs.html  diff.rs.html  duplicates_impl.rs.html  either_or_both.rs.html  extrema_set.rs.html  (+35 more)
syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.Data.html  enum.Expr.html  enum.FieldMutability.html  enum.Fields.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericArgument.html  enum.GenericParam.html  enum.ImplItem.html  enum.ImplRestriction.html  enum.Item.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.Pat.html  enum.PathArguments.html  enum.RangeLimits.html  enum.ReturnType.html  enum.StaticMutability.html  enum.Stmt.html  enum.StrStyle.html  enum.TraitBoundModifier.html  enum.TraitItem.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.UseTree.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse.html  fn.parse2.html  fn.parse_file.html  fn.parse_str.html  index.html  macro.Token.html  macro.braced.html  (+166 more)
(+227 files in other folders)
