[workspace]
members = [
    "bin_data",
    "bin_data_macros",
]
resolver = "2"

[workspace.package]
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
repository = "https://github.com/librePvZ/bin_data"
homepage = "https://github.com/librePvZ/bin_data"
license = "MIT OR Apache-2.0"
readme = "README.md"
