[package]
name = "bin_data"
version = "0.1.0"
edition = "2021"
description = "declarative encoding and decoding for binary formats"

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
