[package]
name = "bin_data"
version = "0.1.0"
edition = "2021"
description = "declarative encoding and decoding for binary formats"

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
macros = ["dep:bin_data_macros"]

[dependencies]
thiserror = "1.0.40"
bin_data_macros = { path = "../bin_data_macros", optional = true }

[dev-dependencies]
bin_data_macros = { path = "../bin_data_macros" }
