[package]
name = "bin_data_macros"
version = "0.1.0"
edition = "2021"
description = "supporting macros for bin_data"

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
