[package]
name = "bin_data_macros"
version = "0.1.0"
edition = "2021"
description = "supporting macros for bin_data"

authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.5"
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = "2.0.0"

[dev-dependencies]
bin_data.path = "../bin_data"
